--- a/app/src/main/res/drawable/rg_shape.xml
+++ b/app/src/main/res/drawable/rg_shape.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Definimos el color -->
-    <solid android:color="@color/green"/>
+    <solid android:width="2dp" android:color="@color/green"/>
     <!-- Especificacion de bordes -->
     <corners android:radius="15dp"/>
 </shape>
