--- a/app/src/main/res/layout/menu_inferior.xml
+++ b/app/src/main/res/layout/menu_inferior.xml
@@ -36,4 +36,12 @@
         android:src="@drawable/baseline_note_add_24"
         app:tint="@color/green_V4" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="cerrarSesion"
+        android:src="@drawable/ic_logout"
+        app:tint="@color/green_V4" />
+
 </LinearLayout>
