--- a/app/src/main/res/layout/menu_inferior.xml
+++ b/app/src/main/res/layout/menu_inferior.xml
@@ -17,12 +17,12 @@
         app:tint="@color/green_V4" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_notification"
+        android:id="@+id/go_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:onClick="volverAlHome"
         android:contentDescription="@string/new_message"
-        android:onClick="updateMessage"
         android:src="@drawable/outline_arrow_upward_24"
         app:tint="@color/green_V4" />
 
