--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Beige"
+    android:background="@drawable/rgb_shape_v2"
     android:visibility="visible"
     tools:context=".MainActivity">
 
@@ -61,8 +61,11 @@
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/rgb_shape"
                 android:onClick="updateMessage"
                 android:text="nueva Tarea"
+                app:backgroundTint="@null"
+                app:cornerRadius="@null"
                 tools:ignore="OnClick" />
 
         </LinearLayout>
