--- a/app/src/main/res/layout/activity_notas.xml
+++ b/app/src/main/res/layout/activity_notas.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/rgb_shape_v2">
 
     <!-- Título arriba centrado -->
     <TextView
@@ -11,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="250dp"
+        android:fontFamily="@font/spartan_black"
         android:text="Mi Lista"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
