--- a/app/src/main/res/layout/menu_inferior.xml
+++ b/app/src/main/res/layout/menu_inferior.xml
@@ -12,9 +12,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:backgroundTint="@color/green_V4"
         android:contentDescription="@string/todo"
         android:src="@drawable/round_account_balance_24"
-        app:tint="@color/green_V4" />
+        app:tint="@color/black" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/go_home"
@@ -24,7 +25,9 @@
         android:onClick="volverAlHome"
         android:contentDescription="@string/new_message"
         android:src="@drawable/outline_arrow_upward_24"
-        app:tint="@color/green_V4" />
+        app:tint="@color/black"
+        android:backgroundTint="@color/green_V4"
+        />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_note"
@@ -34,7 +37,9 @@
         android:layout_marginBottom="16dp"
         android:onClick="OpenActivityTareas"
         android:src="@drawable/baseline_note_add_24"
-        app:tint="@color/green_V4" />
+        app:tint="@color/black"
+        android:backgroundTint="@color/green_V4"
+        />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/logout"
@@ -42,6 +47,9 @@
         android:layout_height="wrap_content"
         android:onClick="cerrarSesion"
         android:src="@drawable/ic_logout"
-        app:tint="@color/green_V4" />
+        app:tint="@color/black"
+        android:backgroundTint="@color/green_V4"
+
+        />
 
 </LinearLayout>
