--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,8 +59,9 @@
 
             <Button
                 android:id="@+id/button"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="135dp"
                 android:background="@drawable/rgb_shape"
                 android:onClick="updateMessage"
                 android:text="nueva Tarea"
